Bug 787513 - Give the proper update rectangle for NPAPI for CoreGraphics plugins on mac. r=smichaud